--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Logramos imágenes de calidad que sean útiles al profesional que las solicita. Atención a particulares y obra social.">
+    <meta name="keywords" content="Diagnostico, a domicilio, tomografía, resonancia-magnética, Rayos-x ">
+    <title>DIB-Contácto</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="shortcut icon" href="../img/icono-salud.png" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
