--- a/pages/rayos.html
+++ b/pages/rayos.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Logramos imágenes de calidad que sean útiles al profesional que las solicita. Atención a particulares y obra social.">
+    <meta name="keywords" content="radiografia, Rayos-x, contraste, informes, obra social, particulares">
+    <title>DIB-Rayos-X</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/styles.css">
+    <link rel="shortcut icon" href="../img/icono-salud.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -40,7 +43,7 @@
         </nav>  <!-- FIN DE LA NAVEGACION -->
 
         <div class="header__title">
-            <h1 id="titulo">Diagnóstico por imagen Berazategui</h1> <!-- TITULO -->
+            <h1 id="titulo">Rayos-x</h1> <!-- TITULO -->
         </div>
 
     </header>
@@ -77,7 +80,7 @@
 
       <div class="container acordeon">
         <div class="row">
-          <div class="col-12 col-lg-6">
+          <div class="col-12 col-lg-12">
             <article class="acordeon__frecuentes">
               <h2>Preguntas Frecuentes</h2>
               <div class="accordion" id="accordionPanelsStayOpenExample">  
@@ -125,8 +128,8 @@
 
           <!-- FORMULARIO -->
           </div>
-          <div class="col-12 col-lg-6">
-            <div class="form">
+          <div class="col-12 col-lg-12 form">
+            <div class="form__text">
               <h2>Sacar turno</h2>
               <div class="mb-3">
                 <label for="formGroupExampleInput" class="form-label">Nombre:</label>
@@ -140,6 +143,7 @@
                 <label for="formGroupExampleInput2" class="form-label">E-mail</label>
                 <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Ingrese su E-mail">
               </div>
+              <button>Enviar</button>
           </div>
           </div>
         </div>
