--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/tomografia.html">Tomografía</a>
+                <a class="nav-link" href="./pages/tomografia.html">Tomografía</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/resonancia.html">Resonancia Magnetica</a>
+                <a class="nav-link" href="./pages/resonancia.html">Resonancia Magnetica</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/rayos.html">Rayos-x</a>
+                <a class="nav-link" href="./pages/rayos.html">Rayos-x</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
