--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Logramos imágenes de calidad que sean útiles al profesional que las solicita. Atención a particulares y obra social.">
     <meta name="keywords" content="Diagnostico, a domicilio, tomografía, resonancia-magnética, Rayos-x ">
-    <title>DIB-Salúd en imágenes</title>
+    <title>DIB-Salud en imágenes</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./sass/styles.css">
