--- a/pages/resonancia.html
+++ b/pages/resonancia.html
@@ -78,6 +78,48 @@
 
 
 
+                <!-- CARDS -->
+
+       <div class="container cards">
+     
+        <div class="row g-4">
+         <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+          <section class="cards__1">
+             <div class="card text-bg-primary" style="width: 18rem;">
+               <img src="https://www.elhospital.com/documenta/imagenes/115897/Resonador-de-tres-Teslas-hospital-la-samaritana-Foto-1.jpg" class="card-img-top" alt="resonador">
+               <div class="card-body">
+                 <h5 class="card-title">Resonador Philips</h5>
+                 <p class="card-text">Resonador multislice de 3 Teslas. muestra en detalle las arterias, cuello, cerebro, aorta y miembros superiores con una resolución mayor. </p>
+               </div>
+             </div>
+          </section>
+         </div>
+         <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+            <section class="cards__2">
+               <div class="card text-bg-primary" style="width: 18rem;">
+                 <img src="https://images.squarespace-cdn.com/content/v1/57fda1c8ebbd1af044ea72e3/1491266753812-0HTNFKMND5AFOWC1ZXA8/DMI-Resonador-Abierto-03.jpg" class="card-img-top" alt="tomografista">
+                 <div class="card-body">
+                   <h5 class="card-title">Resonador abierto</h5>
+                   <p class="card-text">El Resonador de Campo Abierto, usa la misma tecnología que el Resonador Cerrado. Utilizado para pacientes a los que le genera ansiedad los espacios cerrados.</p>
+                 </div>
+               </div>
+            </section>   
+         </div>
+         <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+          <section class="cards__3">
+           <div class="card text-bg-primary" style="width: 18rem;">
+             <img src="https://img.freepik.com/foto-gratis/centro-resonancia-magnetica-especialista-medico-maduro-que-parece-ocupado-preparacion-escaner-resonancia-magnetica_465992-3935.jpg?w=2000" class="card-img-top" alt="Doctor en imagenes">
+             <div class="card-body">
+               <h5 class="card-title">Lic. Esteban Maza</h5>
+               <p class="card-text">El licenciado Maza, egresado de la universidad de la plata, es el encargado del manejo del resonador cerrado y del cuidado del paciente. Trabaja con nosotros desde hace 5 años.</p>
+             </div>
+           </div>
+          </section>
+         </div>
+       </div>
+ 
+     </div>        
+
 
                            <!-- ACORDEON PREGUNTAS FRECUENTES -->
 
