--- a/pages/tomografia.html
+++ b/pages/tomografia.html
@@ -92,8 +92,8 @@
 
      <div class="container cards">
      
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-       <div class="col">
+      <div class="row g-4">
+       <div class="col-12 col-sm-6 col-md-6 col-lg-4">
         <article class="cards__1">
            <div class="card text-center border-secondary text-bg-primary" style="width: 18rem;">
              <img src="https://sanatoriocolegiales.com.ar/images/servicios/equipos-digitales/tomografo/nuevo-01.jpg" class="card-img-top" alt="tomografo">
@@ -104,7 +104,7 @@
            </div>
           </article>
        </div>
-       <div class="col">
+       <div class="col-12 col-sm-6 col-md-6 col-lg-4">
           <article class="cards__2">
              <div class="card text-center border-secondary text-bg-primary" style="width: 18rem;">
                <img src="https://www.hansfordlawfirm.com/images/blog/iStock-1197650057.jpg" class="card-img-top" alt="tomografista">
@@ -115,7 +115,7 @@
              </div>
             </article>
        </div>
-       <div class="col">
+       <div class="col-12 col-sm-6 col-md-6 col-lg-4">
          <div class="card text-center border-secondary text-bg-primary" style="width: 18rem;">
            <img src="https://images.pexels.com/photos/4173239/pexels-photo-4173239.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="Doctor en imagenes">
            <div class="card-body">
