--- a/pages/tomografia.html
+++ b/pages/tomografia.html
@@ -11,7 +11,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/styles.css">
     <link rel="shortcut icon" href="../img/icono-salud.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <header class="header">
@@ -116,6 +115,7 @@
             </article>
        </div>
        <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+        <article class="cards__3">
          <div class="card text-center border-secondary text-bg-primary" style="width: 18rem;">
            <img src="https://images.pexels.com/photos/4173239/pexels-photo-4173239.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="Doctor en imagenes">
            <div class="card-body">
@@ -123,6 +123,7 @@
              <p class="card-text">El Dr. Márquez es especialista en diagnostico por imagen, es el encargado de realizar los informes solicitados por los doctores. Cuenta con mas de 30 años de experiencia, y 12 años con nosotros.</p>
            </div>
          </div>
+        </article>
        </div>
      </div>
 
