--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -72,6 +72,9 @@
                     </article>
                   </div>
 
+  <footer class="footer">
+      <p>© Todos los derechos reservados</p>
+  </footer>
 
 
       <!-- JavaScript Bundle with Popper -->
