--- a/pages/rayos.html
+++ b/pages/rayos.html
@@ -193,14 +193,9 @@
      
 
 
-        <footer>
-          <div class="container">
-            <p>© Todos los derechos reservados</p>
-          </div>
-        </footer>
-
-
-
+  <footer class="footer">
+      <p>© Todos los derechos reservados</p>
+  </footer>
 
 
 
