--- a/pages/resonancia.html
+++ b/pages/resonancia.html
@@ -194,7 +194,9 @@
           </div>
         </div>
      
-
+  <footer class="footer">
+      <p>© Todos los derechos reservados</p>
+  </footer>
 
 
 
