agregando fondos a frecuentes y form

--- a/pages/rayos.html
+++ b/pages/rayos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Logramos imágenes de calidad que sean útiles al profesional que las solicita. Atención a particulares y obra social.">
+    <meta name="description" content=" Diagnostico por imagen Berazategui es la primera institución privada de la Argentina en adquirir un Sistema de Radiología Digital. La alta calidad de las imágenes permite que sean fielmente transmitidas y archivadas en formato electrónico.">
     <meta name="keywords" content="radiografia, Rayos-x, contraste, informes, obra social, particulares">
     <title>DIB-Rayos-X</title>
     <!-- CSS only -->
@@ -120,7 +120,7 @@
      </div>        
 
                    <!-- ACORDEON PREGUNTAS FRECUENTES -->
-
+     <div class="bgi">
       <div class="container acordeon">
         <div class="row">
           <div class="col-12 col-lg-12">
@@ -191,7 +191,7 @@
           </div>
         </div>
      
-
+      </div>
 
   <footer class="footer">
       <p>© Todos los derechos reservados</p>
