--- a/pages/resonancia.html
+++ b/pages/resonancia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Logramos imágenes de calidad que sean útiles al profesional que las solicita. Atención a particulares y obra social.">
+    <meta name="description" content="En Diagnóstico por imagen Berazategui contamos con resonador abierto y cerrado para la realizacion de todo tipo de resonancias. Cerebro y musculoesqueléticas. La sala de resonancia se encuentra ampliamente equipada para la protección del paciente y dentro del marco de las normas de seguridad e higiene.">
     <meta name="keywords" content="resonancia magnética, resonador abierto, contraste, informes, obra social, particulares">
     <title>DIB-Resonancia Magnética</title>
     <!-- CSS only -->
@@ -122,7 +122,7 @@
 
 
                            <!-- ACORDEON PREGUNTAS FRECUENTES -->
-
+     <div class="bgi">
       <div class="container acordeon">
         <div class="row">
           <div class="col-12 col-lg-12">
@@ -193,6 +193,7 @@
           </div>
           </div>
         </div>
+      </div>  
      
   <footer class="footer">
       <p>© Todos los derechos reservados</p>
