--- a/pages/tomografia.html
+++ b/pages/tomografia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Logramos imágenes de calidad que sean útiles al profesional que las solicita. Atención a particulares y obra social.">
+    <meta name="description" content="En Diagnóstico por imagen Berazategui contamos con la última tecnología en materia de tomógrafos. El Tomógrafo Multicorte GE Bright Speed baja la dosis de exposición en un 50%, protegiendo al paciente y obteniendo la misma calidad de imagen.">
     <meta name="keywords" content="tomografía, contraste, informes, obra social, particulares">
     <title>DIB-Tomografía</title>
     <!-- CSS only -->
@@ -130,7 +130,7 @@
    </div> 
 
                    <!-- ACORDEON PREGUNTAS FRECUENTES -->
-                   
+                  <div class="bgi"> 
                    <div class="container acordeon">
                     <div class="row">
                       <div class="col-12 col-lg-12">
@@ -199,7 +199,7 @@
                     </div>     
                   </div>
                 </div>               
-
+              </div>  
 
 
 
