agregando fondo al H1

--- a/pages/resonancia.html
+++ b/pages/resonancia.html
@@ -52,7 +52,7 @@
     </header>
       
 
-
+    <div class="bgi2">
       <div class="container centro">   <!--  ARTICULOS DE EXPLICACION -->
         <div class="row">
           <div class="col-12 col-lg-6">
@@ -74,7 +74,7 @@
             </div>
           </div>     
         </div>
-                <!-- FIN DE ARTICULOS DE EXPLICACION -->
+      </div>          <!-- FIN DE ARTICULOS DE EXPLICACION -->
 
 
 
@@ -127,7 +127,7 @@
         <div class="row">
           <div class="col-12 col-lg-12">
             <article class="acordeon__frecuentes">
-              <h2>Preguntas Frecuentes</h2>
+              <h3>Preguntas Frecuentes</h3>
               <div class="accordion" id="accordionPanelsStayOpenExample">  
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -173,7 +173,7 @@
 
           <!-- FORMULARIO -->
           </div>
-          <div class="col-12 col-lg-12 form">
+          <div class="col-12 col-lg-12 form2">
             <div class="form__text">
               <h2>Sacar turno</h2>
               <div class="mb-3">
