--- a/pages/tomografia.html
+++ b/pages/tomografia.html
@@ -57,6 +57,7 @@
     
     <!--  ARTICULOS DE EXPLICACION -->
 
+  <div class="bgi2">
     <div class="container centro">   
       <div class="row">
         <div class="col-12 col-lg-6">
@@ -81,7 +82,7 @@
           </div>
         </div>     
       </div>
-              <!-- FIN DE ARTICULOS DE EXPLICACION -->
+    </div>         <!-- FIN DE ARTICULOS DE EXPLICACION -->
 
 
 
@@ -135,7 +136,7 @@
                     <div class="row">
                       <div class="col-12 col-lg-12">
                         <article class="acordeon__frecuentes">
-                          <h2>Preguntas Frecuentes</h2>
+                          <h3>Preguntas Frecuentes</h3>
                           <div class="accordion" id="accordionPanelsStayOpenExample">  
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -178,7 +179,7 @@
                           </div>
                       </article>
                       <!-- FIN DEL ACORDEON -->
-                      <div class="col-12 col-lg-12 form">
+                      <div class="col-12 col-lg-12 form2">
                         <div class=" form__text">
                           <h2>Sacar turno</h2>
                           <div class="mb-3" >
