--- a/pages/rayos.html
+++ b/pages/rayos.html
@@ -49,7 +49,7 @@
     </header>
 
 
-
+    <div class="bgi2">
       <div class="container centro">   <!--  ARTICULOS DE EXPLICACION -->
         <div class="row">
           <div class="col-12 col-lg-6">
@@ -74,11 +74,11 @@
             </div>
           </div>     
         </div>
-                <!-- FIN DE ARTICULOS DE EXPLICACION -->
+      </div>           <!-- FIN DE ARTICULOS DE EXPLICACION -->
 
         <!-- CARDS -->
 
-
+    <div class="bgicards">
        <div class="container cards">
      
         <div class="row g-4">
@@ -118,14 +118,14 @@
        </div>
  
      </div>        
-
+  </div>
                    <!-- ACORDEON PREGUNTAS FRECUENTES -->
      <div class="bgi">
       <div class="container acordeon">
         <div class="row">
           <div class="col-12 col-lg-12">
             <article class="acordeon__frecuentes">
-              <h2>Preguntas Frecuentes</h2>
+              <h3>Preguntas Frecuentes</h3>
               <div class="accordion" id="accordionPanelsStayOpenExample">  
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -171,7 +171,7 @@
 
           <!-- FORMULARIO -->
           </div>
-          <div class="col-12 col-lg-12 form">
+          <div class="col-12 col-lg-12 form2">
             <div class="form__text">
               <h2>Sacar turno</h2>
               <div class="mb-3">
