--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/tomografia.html">Tomografía</a>
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="../pages/rayos.html">Rayos-x</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
