--- a/pages/resonancia.html
+++ b/pages/resonancia.html
@@ -16,20 +16,20 @@
     <header class="header">
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark"><!-- BARRA DE NAVEGACION -->
             <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><img class="header__logo" src="../img/logo.jpg" alt="logo"></a>
+            <a class="navbar-brand" href="../index.html"><img class="header__logo" src="../img/logo.jpg" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item"> 
                     <a class="nav-link" href="../pages/tomografia.html">Tomografía</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/resonancia.html">Resonancia Magnetica</a>
+                    <a class="nav-link active" href="../pages/resonancia.html">Resonancia Magnetica</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/rayos.html">Rayos-x</a>
