--- a/pages/resonancia.html
+++ b/pages/resonancia.html
@@ -80,9 +80,9 @@
 
                 <!-- CARDS -->
 
-       <div class="container cards">
-     
-        <div class="row g-4">
+    <div class="bgicards">            
+      <div class="container cards">
+         <div class="row g-4">
          <div class="col-12 col-sm-6 col-md-6 col-lg-4">
           <section class="cards__1">
              <div class="card text-bg-primary" style="width: 18rem;">
@@ -119,7 +119,7 @@
        </div>
  
      </div>        
-
+    </div> 
 
                            <!-- ACORDEON PREGUNTAS FRECUENTES -->
      <div class="bgi">
