--- a/pages/tomografia.html
+++ b/pages/tomografia.html
@@ -89,7 +89,7 @@
 
 
      <!-- CARDS -->
-
+  <div class="bgicards">  
      <div class="container cards">
      
       <div class="row g-4">
@@ -129,7 +129,7 @@
      </div>
 
    </div> 
-
+  </div>
                    <!-- ACORDEON PREGUNTAS FRECUENTES -->
                   <div class="bgi"> 
                    <div class="container acordeon">
