--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,23 +55,26 @@
 
 
 
-
-            <div class="container contacto">
-              <div class="row">
-                <div class="col">
-                  <article class="contacto__instalaciones">
-                    <h2>Conocé nuestras instalaciones</h2>
-                    <iframe class="video" src="https://www.youtube.com/embed/5GpMUyMsOGg" title="YouTube video player" 
-                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    allowfullscreen></iframe>
-                  </article>
-                  <div class="col">
-                    <article class="contacto__mapa">
-                      <h2>Como llegar</h2>
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3276.9238386844117!2d-58.21322058476563!3d-34.78269258041343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a328c753b58bf5%3A0xde8790e34d215b56!2sHospital%20Evita%20Pueblo!5e0!3m2!1ses-419!2sar!4v1655587621008!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </article>
-                  </div>
-
+<div class="bgicards">
+  <div class="container contacto">
+    <div class="row">
+      <div class="col">
+        <article class="contacto__instalaciones">
+          <h2>Conocé nuestras instalaciones</h2>
+          <iframe class="video" src="https://www.youtube.com/embed/5GpMUyMsOGg" title="YouTube video player" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+        </article>
+        <div class="col">
+          <article class="contacto__mapa">
+            <h2>Como llegar</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3276.9238386844117!2d-58.21322058476563!3d-34.78269258041343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a328c753b58bf5%3A0xde8790e34d215b56!2sHospital%20Evita%20Pueblo!5e0!3m2!1ses-419!2sar!4v1655587621008!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </article>
+        </div>
+      </div>  
+    </div> 
+  </div>   
+</div>
   <footer class="footer">
       <p>© Todos los derechos reservados</p>
   </footer>
